--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   --max-width: 1100px;
 }
 .category {
-  --sport-color: #f99500;
+  --sport-color: rgb(171, 52, 5);
   --ent-color: #a66bbe;
   --tech-color: rgb(2, 67, 2);
 }
@@ -46,6 +46,48 @@ h6 {
   margin: auto;
   padding: 0 2rem;
   overflow: hidden;
+}
+.category {
+  display: inline-block;
+  color: #fff;
+  font-size: 0.55rem;
+  text-transform: uppercase;
+  padding: 0.4rem 0.6rem;
+  border-radius: 15px;
+  margin-bottom: 0.5rem;
+}
+.category-sports {
+  background: var(--sport-color);
+}
+.category-ent {
+  background: var(--ent-color);
+}
+.category-tech {
+  background: var(--tech-color);
+}
+.btn {
+  display: inline-block;
+  border: none;
+  background: var(--dark-color);
+  color: #fff;
+  padding: 0.5rem 1.5rem;
+}
+.btn-light {
+  background: var(--light-color);
+}
+.btn-primary {
+  background: var(--primary-color);
+}
+.btn-secondary {
+  background: var(--secondary-color);
+}
+.btn:hover {
+  opacity: 0.8;
+}
+.btn-block {
+  display: block;
+  width: 100%;
+  text-align: center;
 }
 /* Navigation */
 #main-nav {
@@ -92,4 +134,27 @@ h6 {
   background: var(--dark-color);
   padding: 2rem;
   position: relative;
+}
+#showcase:before {
+  content: "";
+  background: url(../img/showcase.jpg) no-repeat center center/cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.4;
+}
+#showcase .showcase-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+#showcase .showcase-content {
+  z-index: 1;
+}
+#showcase .showcase-content p {
+  margin-bottom: 1rem;
 }
