--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,9 @@ h6 {
 .list li a:hover {
   color: var(--primary-color) !important;
 }
+.l-heading {
+  font-size: 3rem;
+}
 /* Inner Page Grid Container */
 .page-container {
   display: grid;
@@ -243,6 +246,16 @@ h6 {
 }
 #home-articles .articles-container > *:last-child {
   grid-column: 2 / span 2;
+}
+#article .meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #eee;
+  padding: 0.5rem;
+}
+#article .meta .category {
+  margin-top: 0.4rem;
 }
 /* Footer */
 #main-footer {
